kubernates/nacos.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nacos-namespace

---

apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: nacos-namespace
spec:
  selector:
    app: nacos
  type: LoadBalancer
  ports:
  - name: http
    port: 8848
    targetPort: 8848
  - name: client-rpc
    port: 9848
    targetPort: 9848

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: nacos-namespace
  labels:
    app: nacos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
      - name: nacos
        image: nacos/nacos-server:v2.5.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8848
        - name: cluster
          containerPort: 8849
        - name: client-rpc
          containerPort: 9848
        - name: raft-rpc
          containerPort: 9849
