kubernates/nacos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
spec:
  rules:
    - host: nacos.example.com
      http:
        paths:
          - backend:
              service:
                name: nacos
                port:
                  number: 8848
            pathType: Prefix
            path: /
